# Malak

./: .gitignore  compose.yml  init_db.sql  package-lock.json
agent/: Cargo.toml
agent/src/: main.rs  metrics_info.rs
api/: Cargo.toml
api/src/: db.rs  insertPayload.rs  main.rs  models.rs
dashboard/: package-lock.json  package.json
dashboard/.nuxt/: components.d.ts  imports.d.ts  nitro.json  nuxt.d.ts  nuxt.json  nuxt.node.d.ts  tsconfig.app.json  tsconfig.json  tsconfig.node.json  tsconfig.server.json  tsconfig.shared.json
dashboard/.nuxt/dev/: index.mjs
dashboard/.nuxt/manifest/: latest.json
dashboard/.nuxt/manifest/meta/: dev.json
dashboard/.nuxt/types/: build.d.ts  components.d.ts  imports.d.ts  modules.d.ts  nitro-imports.d.ts
dashboard/app/: api.json
dashboard/app/assets/css/: main.css
dashboard/app/components/: DisksList.vue  MachinesList.vue  NetworksList.vue  Sidebar.vue  ThemeToggle.vue
dashboard/app/components/Cpu/: CpuComponent.vue  SubCpuComponent.vue
dashboard/app/components/Disk/: DiskComponent.vue
dashboard/app/components/GlobalData/: GlobalDataComponent.vue
dashboard/app/components/Memory/: MemoryComponent.vue  SubMemoryComponent.vue
dashboard/app/components/Network/: NetworkComponent.vue
dashboard/app/components/ui/progress/: Progress.vue
dashboard/app/components/ui/sidebar/: index.ts
dashboard/app/composables/: useMonitor.js
dashboard/app/lib/: utils.ts
dashboard/app/pages/: login.vue
dashboard/app/pages/monitor/: disks.vue  index.vue  machines.vue  networks.vue
