[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
dotenvy = "0.15.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "time"] }
tokio = { version = "1.52.3", features = ["macros", "net", "rt-multi-thread"] }
uuid = { version = "1.23.1", features = ["v4"] }
tower-http = { version = "0.5", features = ["cors"] }
http = "1"
argon2 = "0.5.3"
